# Funasr-Demo

./: README.md  funasr_wss_client.py  funasr_wss_server.py  pyproject-server.toml  pyproject.toml
