[project]
name = "asr-server-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "funasr>=1.2.7",
    "kaldiio>=2.18.1",
    "librosa>=0.11.0",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.67.1",
    "websockets>=15.0.1",
]
